--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,9 @@
 body {
-    background: red;
+    background: green;
     overflow:hidden;
     position: fixed;
     top: 0px;
+    touch-action: pan-x pan-y;
 }
 
 html, body {
