--- a/assets/style.css
+++ b/assets/style.css
@@ -1,12 +1,85 @@
 body {
-    background: green;
+    background: #161618;
     overflow:hidden;
     position: fixed;
     top: 0px;
     touch-action: pan-x pan-y;
-}
-
-html, body {
+    color: #f2f5f4;
     height: 100%;
     width: 100%;
+}
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+div.ok-button {
+    border: 2px solid #f2f5f4;
+    border-radius: 50%;
+    margin: 0 auto;
+    max-width: 200px;
+    max-height: 200px;
+    min-width: 200px;
+    min-height: 200px;
+    text-align: center;
+    grid-row: 2 / 2;
+    grid-column: 2 / 2;
+    animation: fadein 5s infinite;
+}
+
+@keyframes fadein {
+    0% {
+        opacity: 0.2;
+        transform: scale(0.95);
+	}
+
+	50% {
+        opacity: 1;
+        transform: scale(1);
+	}
+
+	100% {
+        opacity: 0.2;
+        transform: scale(0.95);
+    }
+}
+
+.ok-button p {
+    font-size: 4em;
+    font-weight: bold;
+}
+
+.center-control {
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 50px 200px 50px;
+    grid-template-rows: 50px 200px 50px;
+}
+
+.burger-icon {
+    cursor: pointer;
+    max-width: 30px;
+    z-index: 2;
+}
+
+.burger-bar {
+    width: 30px;
+    height: 3px;
+    background-color: #f2f5f4;
+    margin: 6px 0;
+    opacity: 0.5;
+
+}
+
+#settings {
+    min-width: 100%;
+    min-height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    margin-top: 20px;
+    display: none;
 }
