--- a/remote-frontend/src/pages/SettingsPage.module.css
+++ b/remote-frontend/src/pages/SettingsPage.module.css
@@ -1,15 +1,3 @@
-#settings-form {
-    display: flex;
-    flex-direction: column;
-    max-width: 100%;
-    margin: 10 0;
-}
-
-#settings-form > * {
-    margin: 10px auto;
-    width: 90%;
-}
-
 h1 {
     text-align: center;
 }
@@ -32,4 +20,15 @@ input[type="range"] {
     grid-template-rows: 1fr 1fr 1fr 1fr;
     grid-row-gap: 1em;
     padding: 10px;
+}
+
+.saveButton {
+  border: 1px solid hsl(0, 0%, 10%);
+  background-color: hsl(0, 0%, 14%);
+  border-radius: 5%;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.saveButton:hover {
+    cursor: pointer;
 }
